update: direction section

--- a/src/app/i18n/locales/en/page.json
+++ b/src/app/i18n/locales/en/page.json
@@ -1,3 +1,10 @@
 {
-  "about_u_devs": "IT-Outsourcing Company"
+  "about_u_devs": "IT-Outsourcing Company",
+  "our_services": "Our services",
+  "our_services_1": "Team",
+  "our_services_2": "Development of mobile applications",
+  "our_services_3": "Development and implementation ERP systems",
+  "our_services_4": "User interface, User experience design",
+  "our_services_5": "Optimization IT consulting infrastructure",
+  "our_services_6": "IT consulting"
 }
