--- a/src/app/i18n/locales/ru/page.json
+++ b/src/app/i18n/locales/ru/page.json
@@ -1,3 +1,10 @@
 {
-  "about_u_devs": "IT-Аутсорсинг Компания"
+  "about_u_devs": "IT-Аутсорсинг Компания",
+  "our_services": "Наши услуги",
+  "our_services_1": "Выделенная команда",
+  "our_services_2": "Разработка мобильных приложений",
+  "our_services_3": "Разработка и внедрение ERP систем",
+  "our_services_4": "UI / UX дизайн",
+  "our_services_5": "Оптимизация инфраструктуры",
+  "our_services_6": "IT консалтинг"
 }
