--- a/src/app/i18n/locales/ru/page.json
+++ b/src/app/i18n/locales/ru/page.json
@@ -6,5 +6,8 @@
   "our_services_3": "Разработка и внедрение ERP систем",
   "our_services_4": "UI / UX дизайн",
   "our_services_5": "Оптимизация инфраструктуры",
-  "our_services_6": "IT консалтинг"
+  "our_services_6": "IT консалтинг",
+  "command_title": "Выделенная команда",
+  "command_desc": "Для каждого проекта мы формируем команду, в которую входят проект менеджер, бизнес-аналитик, UI/UX дизайнер, DevOps, QA-инженер, бэкенд и фронтенд разработчики",
+  "command_number": "Сотрудников"
 }
