--- a/src/app/i18n/locales/ru/page.json
+++ b/src/app/i18n/locales/ru/page.json
@@ -9,5 +9,16 @@
   "our_services_6": "IT консалтинг",
   "command_title": "Выделенная команда",
   "command_desc": "Для каждого проекта мы формируем команду, в которую входят проект менеджер, бизнес-аналитик, UI/UX дизайнер, DevOps, QA-инженер, бэкенд и фронтенд разработчики",
-  "command_number": "Сотрудников"
+  "command_number": "Сотрудников",
+  "technologies": "Технологии",
+  "services_title_1": "Мобильная разработка",
+  "services_desc_1": "В сотрудничестве со стартапами мы научились создавать творческий и функциональный пользовательский интерфейс для мобильных приложений.",
+  "services_title_2": "ERP cистемы",
+  "services_desc_2": "IT Системы любого уровня сложности в удобные для вас сроки.",
+  "services_title_3": "UI / UX Дизайн",
+  "services_desc_3": "Наша компания придерживается подхода к дизайну, ориентированного на человека..",
+  "services_title_4": "Оптимизация инфраструктуры",
+  "services_desc_4": "Наши опытные специалисты помогут оптимизировать вашу инфраструктуру.",
+  "services_title_5": "IT консалтинг",
+  "services_desc_5": "Мы можем повысить квалификацию ваших сотрудников тем самым увеличить эффективность вашей компании."
 }
